log

Thu 14 Mar 2024 08:38:15 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
f06b1d8
Thu 14 Mar 2024 08:41:20 PM UTC: 
 exercises.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:25:10: error: ‘max’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   25 |   return max;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
dfeffb8
Thu 14 Mar 2024 08:41:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
d992373
Thu 14 Mar 2024 08:44:17 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
7ab24ac
Thu 14 Mar 2024 08:45:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:7: error: variable ‘temp’ set but not used [-Werror=unused-but-set-variable]
   34 |   int temp = 0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
bf056be
Thu 14 Mar 2024 08:46:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
8eb63ec
Thu 14 Mar 2024 08:47:20 PM UTC: 
 exercises.c | 20 ++++++++------------
 1 file changed, 8 insertions(+), 12 deletions(-)
 tests:  0|6
total_score: 10/70
b5308a0
Thu 14 Mar 2024 08:48:28 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:32:47: error: expected ‘;’ before ‘)’ token
   32 |   for (int i = 0, k = size - 1; i < (size / 2))
      |                                               ^
      |                                               ;
Compilation failed
4c8d348
Thu 14 Mar 2024 08:48:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
1abf887
Thu 14 Mar 2024 08:49:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
65699f9
